lib/flux/apps/household/mealie/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mealie
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: mealie
    app.kubernetes.io/instance: mealie
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
