lib/flux/apps/household/mealie/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mealie
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Household
    gethomepage.dev/name: Mealie
    gethomepage.dev/description: Recipes
    gethomepage.dev/icon: mealie.png
spec:
  parentRefs: ${gateway_parent_refs}
  hostnames:
    - ${domain}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: mealie
          port: 80
